--- a/index.html
+++ b/index.html
@@ -437,15 +437,6 @@ Leon Martin
 
   <p class="date">2024-05-15</p>
 </section>
-<section class="slide level2">
-
-<!-- ## Table of Contents
-- Challenges of Brain Imaging
-- MRI Basics
-- Impact of Analysis/Processing Pipelines
-- Modeling Brain Network Dynamics -->
-<!-- Introduction -->
-</section>
 <section id="main-challenges" class="slide level2">
 <h2>Main Challenges</h2>
 <div class="columns">
@@ -713,7 +704,7 @@ Leon Martin
 </section>
 <section id="current-modeling-studies-.nostretch-.r-resize-text-.smaller-.column-margin0px" class="slide level2">
 <h2>Current Modeling Studies {.nostretch .r-resize-text .smaller .column-margin=0px}</h2>
-<div class="quarto-layout-panel" data-margin-top="0px" data-margin-bottom="0px" data-layout="[[1,1],[1,1]]">
+<div class="quarto-layout-panel" data-margin-bottom="0px" data-layout="[[1,1],[1,1]]" data-margin-top="0px">
 <div class="quarto-layout-row">
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
@@ -1234,11 +1225,16 @@ rule create_sc:
 </div>
 </div>
 </div>
-</div><div class="column" style="width:20%;">
-<div class="quarto-figure quarto-figure-center">
-<figure>
-<p><img data-src="images/BIDS_logo_black_transparent_background_crop.png" class="quarto-figure quarto-figure-center"></p>
-</figure>
+</div><div class="column quarto-layout-panel" data-layout="[-1], [1], [-1]" style="width:20%;">
+<div class="quarto-layout-row">
+<div class="quarto-figure-spacer quarto-layout-cell" style="flex-basis: 100.0%;justify-content: flex-start;">
+<p>&nbsp;</p>
+</div>
+</div>
+<div class="quarto-layout-row">
+<div class="quarto-figure-spacer quarto-layout-cell" style="flex-basis: 100.0%;justify-content: flex-start;">
+<p>&nbsp;</p>
+</div>
 </div>
 </div>
 </div>
