chore: Update margin-bottom property in index.html layout panel and update workshop

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ Leon Martin
 <section id="main-challenges" class="slide level2">
 <h2>Main Challenges</h2>
 <div class="columns">
-<div class="column r-fit-text smaller" style="width:50%;">
+<div class="column" style="margin-top: 0px;  margin-bottom: 0px; font-size: 0.8em;">
 <p><strong>Goal of neuroimaging</strong>: Elucidate brain function in relation to its multiple layers of organization that operate at different spatial and temporal scales</p>
 <div class="callout callout-warning callout-titled callout-style-default">
 <div class="callout-body">
@@ -460,8 +460,17 @@ Leon Martin
 </div>
 </div>
 <p>↳ Brain network models help understanding multi-scale brain dynamics by integrating individual <strong>structural</strong> and <strong>functional</strong> data with neural population models <span class="citation" data-cites="Schirner2018">(<a href="#/references" role="doc-biblioref" onclick="">Schirner et al. 2018</a>)</span>.</p>
-</div><div class="column" style="margin-top: 0px;  margin-bottom: 0px; font-size: 0.6em;">
+</div><div class="column quarto-layout-panel" style="margin-top: 0px;  margin-bottom: 0px; font-size: 0.6em;" data-layout="[[-1],[1],[-1]]">
+<div class="quarto-layout-row">
+<div class="quarto-figure-spacer quarto-layout-cell" style="flex-basis: 100.0%;justify-content: flex-start;">
+<p>&nbsp;</p>
+</div>
+</div>
+<div class="quarto-layout-row">
+<div class="quarto-layout-cell" style="flex-basis: 100.0%;justify-content: flex-start;">
 <p><img data-src="https://iiif.elifesciences.org/lax/28927%2Felife-28927-fig1-v2.tif/full/1500,/0/default.jpg"> <img data-src="https://iiif.elifesciences.org/lax/28927%2Felife-28927-fig2-v2.tif/full/1500,/0/default.jpg"></p>
+</div>
+</div>
 </div>
 </div>
 <div class="citations">
@@ -704,7 +713,7 @@ Leon Martin
 </section>
 <section id="current-modeling-studies" class="slide level2 smaller">
 <h2>Current Modeling Studies</h2>
-<div class="quarto-layout-panel" data-margin-top="0px" data-layout="[[1,1],[1,1]]" data-margin-bottom="0px">
+<div class="quarto-layout-panel" data-margin-bottom="0px" data-layout="[[1,1],[1,1]]" data-margin-top="0px">
 <div class="quarto-layout-row">
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
