chore: Update margin-bottom property in index.html layout panel

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@ Leon Martin
 </section>
 <section id="current-modeling-studies" class="slide level2 smaller">
 <h2>Current Modeling Studies</h2>
-<div class="quarto-layout-panel" data-layout="[[1,1],[1,1]]" data-margin-top="0px" data-margin-bottom="0px">
+<div class="quarto-layout-panel" data-margin-bottom="0px" data-layout="[[1,1],[1,1]]" data-margin-top="0px">
 <div class="quarto-layout-row">
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
