chore: Update margin-bottom property in index.html layout panel and footer text

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@ Leon Martin
 </section>
 <section id="current-modeling-studies" class="slide level2 smaller">
 <h2>Current Modeling Studies</h2>
-<div class="quarto-layout-panel" data-margin-top="0px" data-margin-bottom="0px" data-layout="[[1,1],[1,1]]">
+<div class="quarto-layout-panel" style="margin-top: 0px;  margin-bottom: 0px; font-size: 0.8em;" data-layout="[[1,1],[1,1]]">
 <div class="quarto-layout-row">
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
@@ -1329,7 +1329,7 @@ rule create_sc:
 <h1>References</h1>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
-<p>© Leon Martin 2024</p>
+<p>© 2024 Leon Martin, Brain Simulation Section, Charité University Medicine Berlin</p>
 </div>
 </div>
 <div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
