chore: Update margin-bottom property in index.html layout panel

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ Leon Martin
 </div>
 </div>
 <p>↳ Brain network models help understanding multi-scale brain dynamics by integrating individual <strong>structural</strong> and <strong>functional</strong> data with neural population models <span class="citation" data-cites="Schirner2018">(<a href="#/references" role="doc-biblioref" onclick="">Schirner et al. 2018</a>)</span>.</p>
-</div><div class="column quarto-layout-panel" data-layout="[[-1],[1],[-1]]" style="margin-top: 0px;  margin-bottom: 0px; font-size: 0.6em;">
+</div><div class="column quarto-layout-panel" style="margin-top: 0px;  margin-bottom: 0px; font-size: 0.6em;" data-layout="[[-1],[1],[-1]]">
 <div class="quarto-layout-row">
 <div class="quarto-figure-spacer quarto-layout-cell" style="flex-basis: 100.0%;justify-content: flex-start;">
 <p>&nbsp;</p>
@@ -713,7 +713,7 @@ Leon Martin
 </section>
 <section id="current-modeling-studies" class="slide level2 smaller">
 <h2>Current Modeling Studies</h2>
-<div class="quarto-layout-panel" data-layout="[[1,1],[1,1]]" style="margin-top: 0px;  margin-bottom: 0px; font-size: 0.8em;">
+<div class="quarto-layout-panel" style="margin-top: 0px;  margin-bottom: 0px; font-size: 0.8em;" data-layout="[[1,1],[1,1]]">
 <div class="quarto-layout-row">
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
