--- a/index.html
+++ b/index.html
@@ -852,13 +852,52 @@ Figure&nbsp;1: Average parcellated structural and functional connectomes (84 Are
 <h2>Empirical data features</h2>
 <h3 id="eeg">EEG</h3>
 <p><img data-src="images/Zorzos2021_Fig1.webp"></p>
+<div class="columns">
+<div class="column" style="width:80%;">
 <ul>
 <li>Empirical: Data is projected to source space to fit model</li>
 <li>Simulated: Forward-modelling via leadfield matrix</li>
 </ul>
+</div><div class="column" style="width:20%;">
+<p><span class="math display">\[
+\mathbf{V} = \mathbf{L} \cdot \mathbf{J}
+\]</span></p>
+</div>
+</div>
 <div class="citations">
 <p><span class="citation" data-cites="Zorzos2021">(<a href="#/references" role="doc-biblioref" onclick="">Zorzos et al. 2021</a>)</span></p>
 </div>
+<aside class="notes">
+<p>V: Voltages on the scalp L: Leadfield matrix J: Currents in the source</p>
+<ul>
+<li><strong>Source Localization</strong>: Based on the anatomical model of a subject’s cortical surface.</li>
+<li><strong>Sensor Registration</strong>: Registering sensor locations to the source space.</li>
+<li><strong>Lead-Field Matrix Computation</strong>: Using a sphere-head model fit to meshes representing:
+<ul>
+<li>Boundaries between cortical surface and skull.</li>
+<li>Boundaries between skull and skin.</li>
+<li>Boundaries between skin and air.</li>
+</ul></li>
+<li><strong>Customization</strong>: Head model and gain matrix customized to each subject’s anatomy.</li>
+</ul>
+<p><strong>Inverse Problem:</strong></p>
+<ul>
+<li>In EEG source localization, the inverse problem involves estimating the distribution of neural sources J from the measured scalp potentials V.</li>
+<li>Considered ill-posed because no unique solution.</li>
+<li>Many different source configurations can produce similar scalp potentials.</li>
+<li>small errors in the measurements can lead to large errors in the estimated sources.</li>
+</ul>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 <!-- Methods -->
 </section>
 <section id="mri-processing-pipeline" class="slide level2">
