chore: Update margin-bottom property in index.html layout panel and add Source Imaging notes

--- a/index.html
+++ b/index.html
@@ -868,6 +868,8 @@ Figure&nbsp;1: Average parcellated structural and functional connectomes (84 Are
 <p><span class="citation" data-cites="Zorzos2021">(<a href="#/references" role="doc-biblioref" onclick="">Zorzos et al. 2021</a>)</span></p>
 </div>
 <aside class="notes">
+<p><strong>Source Imaging</strong>: Programmatic interpretation of EEG results (What we are intuitively doing when looking at EEG data)</p>
+<p>Challenges: - Oblique currents - Electric resistance (of different tissues)</p>
 <p>V: Voltages on the scalp L: Leadfield matrix J: Currents in the source</p>
 <ul>
 <li><strong>Source Localization</strong>: Based on the anatomical model of a subject’s cortical surface.</li>
