chore: Update BIDS folder structure in index.html and slides/Methods/BIDS.qmd

--- a/index.html
+++ b/index.html
@@ -1374,6 +1374,42 @@ rule create_sc:
 </div>
 </div>
 </section>
+<section id="bids-folder-structure-of-a-tvb-project" class="slide level2 smaller centered">
+<h2>BIDS Folder Structure of a TVB Project</h2>
+<p>📁 Project/</p>
+<pre><code>📁 sub-1/
+
+    📁 net/
+
+        📄 sub-1_nt-distances_desc-SC_net.json
+
+        📈 sub-1_nt-distances_desc-SC_net.tsv
+
+        📄 sub-1_nt-weights_desc-SC_net.json
+
+        📈 sub-1_nt-weights_desc-SC_net.tsv
+
+    📁 eq/
+
+        📄 sub-1_desc-JansenRit_lems.json
+
+        📈 sub-1_desc-JansenRit_lems.xml
+
+    📁 ts/
+
+        📄 sub-1_desc-simVOIy1_ts.json
+
+        📈 sub-1_desc-simVOIy1_ts.tsv
+
+        📄 sub-1_desc-simVOIy2_ts.json
+
+        📈 sub-1_desc-simVOIy2_ts.tsv</code></pre>
+</section>
+<section id="thank-you" class="title-slide slide level1 center">
+<h1>Thank you!</h1>
+
+</section>
+
 <section id="references" class="title-slide slide level1 smaller scrollable">
 <h1>References</h1>
 <div class="quarto-auto-generated-content">
