chore: Add agenda image and update presentation structure in index.html and index.qmd

--- a/index.html
+++ b/index.html
@@ -437,6 +437,10 @@ Leon Martin
 
   <p class="date">2024-05-16</p>
 </section>
+<section id="section" class="slide level2">
+<h2></h2>
+<p><img data-src="images/agenda.png"></p>
+</section>
 <section id="main-challenges" class="slide level2">
 <h2>Main Challenges</h2>
 <div class="columns">
@@ -634,7 +638,7 @@ Leon Martin
 <p><span class="citation" data-cites="Schild1992">(<a href="#/references" role="doc-biblioref" onclick="">Schild 1992</a>)</span></p>
 </div>
 </section>
-<section id="section" class="slide level2">
+<section id="section-1" class="slide level2">
 <h2></h2>
 <!-- MR Basics -->
 <p><img data-src="slides/Theory/FallSchool21%20-%20MRbasics_LM.gif"></p>
